# reqprocessor-module

./: CMakeLists.txt  Makefile  README.md
common/: DataType.h
protos/: Compliance.proto  PeerServices.proto  Registration.proto  Regulator.proto  Wset.proto
regulator_client/: Registration.grpc.pb.cc  Registration.grpc.pb.h  Regulator.grpc.pb.cc  Regulator.grpc.pb.h  Regulator.pb.h  RegulatorClient.cc  Wset.pb.cc  build.sh
regulator_server/: Compliance.pb.cc  Compliance.pb.h  Registration.pb.cc  Registration.pb.h  RegistrationServer.cc  Regulator.grpc.pb.cc  Regulator.pb.cc  Regulator.pb.h  RegulatorServer.cc  RegulatorServer.h  ThreadPool.h  Wset.pb.h  build.sh  launchCmd.md
